--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "my portfolio",
   "main": "./index.js",
   "scripts": {
-    "dev": "webpack-dev-server --open --mode development --config ./configs/dev.js",
+    "dev": "webpack-dev-server --config ./configs/dev.js",
     "build": "webpack --config ./configs/build.js"
   },
   "browserslist": [
@@ -33,7 +33,7 @@
     "jasmine-node": "^3.0.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-mandrill": "^1.0.1",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.0",
     "path": "^0.12.7",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
