--- a/package.json
+++ b/package.json
@@ -14,24 +14,23 @@
   "author": "DmitriyOrlov",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/preset-env": "^7.6.2",
-    "autoprefixer": "^9.6.1",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "autoprefixer": "^9.7.3",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.2.0",
+    "css-loader": "^3.4.1",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
     "emailjs": "^2.2.0",
     "extract-loader": "^3.1.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^4.2.0",
+    "file-loader": "^4.3.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jasmine-node": "^3.0.0",
-    "mini-css-extract-plugin": "^0.8.0",
     "node-mandrill": "^1.0.1",
     "node-sass": "^4.13.0",
     "path": "^0.12.7",
@@ -40,16 +39,13 @@
     "postcss-preset-env": "^6.7.0",
     "sass-loader": "^8.0.0",
     "scss-loader": "0.0.1",
-    "style-loader": "^1.0.0",
     "unirest": "^0.6.0",
-    "url-loader": "^2.1.0",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.1",
-    "webpack-livereload-plugin": "^2.2.0"
+    "url-loader": "^2.3.0",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1",
+    "webpack-livereload-plugin": "^2.2.0",
+    "webpack-merge": "^4.2.2"
   },
-  "dependencies": {
-    "json-loader": "^0.5.7",
-    "tls": "0.0.1"
-  }
+  "dependencies": {}
 }
