перелопачена сборка. часть компонентов убрана из неё

--- a/package.json
+++ b/package.json
@@ -4,48 +4,50 @@
   "description": "my portfolio",
   "main": "./index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config ./configs/dev.js",
-    "build": "webpack --config ./configs/build.js"
+    "dev": "webpack-dev-server --config ./webpack.dev.ts",
+    "build": "webpack --config ./webpack.build.ts"
   },
   "browserslist": [
-    "> 1%",
-    "last 3 version"
+    "> 0.1%",
+    "IE 11"
   ],
   "author": "DmitriyOrlov",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
-    "autoprefixer": "^9.7.3",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
-    "babel-preset-env": "^1.7.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.4.1",
+    "@types/node": "^14.0.1",
+    "@types/webpack": "^4.41.13",
+    "@types/webpack-dev-server": "^3.10.1",
+    "autoprefixer": "^9.7.6",
+    "browserlist": "^1.0.1",
+    "cache-loader": "^4.1.0",
+    "css-loader": "^3.5.3",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
-    "emailjs": "^2.2.0",
-    "extract-loader": "^3.1.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^4.3.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "jasmine-node": "^3.0.0",
-    "node-mandrill": "^1.0.1",
-    "node-sass": "^4.13.0",
+    "extract-loader": "^5.0.1",
+    "favicons-webpack-plugin": "^3.0.1",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "node-sass": "^4.14.1",
+    "normalize.css": "^8.0.1",
     "path": "^0.12.7",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
+    "postcss-normalize": "^8.0.1",
     "postcss-preset-env": "^6.7.0",
-    "sass-loader": "^8.0.0",
-    "scss-loader": "0.0.1",
-    "unirest": "^0.6.0",
-    "url-loader": "^2.3.0",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1",
-    "webpack-livereload-plugin": "^2.2.0",
-    "webpack-merge": "^4.2.2"
+    "pug": "^2.0.4",
+    "pug-loader": "^2.4.0",
+    "resolve-url-loader": "^3.1.1",
+    "robotstxt-webpack-plugin": "^7.0.0",
+    "sass-loader": "^8.0.2",
+    "ts-loader": "^7.0.4",
+    "ts-node": "^8.10.1",
+    "typescript": "^3.9.2",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "html-loader": "^1.1.0",
+    "reset.css": "^2.0.2"
+  }
 }
